UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/checkContractTeamStatusOnClosedOwn__c.field-meta.xml
<CustomField>
    <fullName>checkContractTeamStatusOnClosedOwn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkContractTeamStatusOnClosedOwn</label>
    <type>Checkbox</type>
</CustomField>