UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/field_assignment_automation_disabled__c.field-meta.xml
<CustomField>
    <fullName>field_assignment_automation_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>field assignment automation disabled</label>
    <type>Checkbox</type>
</CustomField>