UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/HybridOpportunityDisabled__c.field-meta.xml
<CustomField>
    <fullName>HybridOpportunityDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control the sync for Vlocity Quote to Opportunity.</description>
    <label>Hybrid Opportunity Disabled</label>
    <type>Checkbox</type>
</CustomField>