UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/OliTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>OliTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to enable/disable OpportunityLineItem Trigger.</description>
    <label>Opp_LI_TriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>