UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/OpportunityTeamMember_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTeamMember_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable or disable our OpptyTeamMember Trigger methods from ftr_OpportunityTeamMemberTrigger trigger</description>
    <label>OpportunityTeamMember Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>