UCF-APR2.4/ftr main/force-app/main/default/objects/TriggerSettings__c/fields/Premises_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Premises_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premises Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>